# emoji-favicon

./: .ghci  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  emoji-favicon.cabal  flake.nix
src/: EmojiFavicon.hs
src/EmojiFavicon/: TH.hs  Widget.hs
